# splendor-sample-py

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  wait-for-server.sh
actor/: __main__.py
