[tool.poetry]
name = "splendor-sample-py"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
splendor-actor = { git = "https://github.com/lightsing/splendor", subdirectory = "sdk/py", rev = "e02111d" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
